borrando y actualizando seccion joystick

--- a/pages/joysticks.html
+++ b/pages/joysticks.html
@@ -19,8 +19,9 @@
 <header>
     <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
-            <a class="navbar-brand" href="index.html"><img class="logo" src="../img/logo.png"
-                    alt="logo">Gala<span>XY</span> </a>
+            <a class="navbar-brand" href="index.html">
+                <img class="logo" src="../img/logo.png" alt="logo">Gala<span>XY</span>
+            </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll"
                 aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -61,7 +62,7 @@
 
 <!-- PRODUCTOS DESTACADOS -->
 
-<section class="joysticks">
+<section class="productos__joysticks">
     <div class="card">
         <img src="../img/play4-mando.jpg" class="card-img-top" alt="...">
         <div class="card-body">
@@ -120,56 +121,93 @@
             <a href="#" class="card-link">Añadir al carro</a>
         </div>
     </div>
-</section>
-<section>
-    <h2>Productos destacados</h2>
-    <div class="productos">
-        <div>
-            <img src="../img/rosa.jpg" alt="Joystick xbox">
-            <h3>Joystick Xbox One Pink</h3>
-            <p>Precio: $120</p>
-            <a href="" class="boton">Comprar</a>
-            <p>Reseñas: 4.2 estrellas</p>
+    <div class="card">
+        <img src="../img/negro.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+            <h5 class="card-title">Joystick inalámbrico Microsoft Xbox Wireless Controller Series</h5>
+            <p class="card-text">Llega gratis mañana</p>
         </div>
-        <div>
-            <img src="../img/jpystick5.jpg" alt="Joystick PS5">
-            <h3>Joystick PS5</h3>
-            <p>Precio: $200</p>
-            <a href="" class="boton">Comprar</a>
-            <p>Reseñas: 4.8 estrellas</p>
+        <ul class="list-group list-group-flush">
+            <li class="list-group-item">$44.999</li>
+        </ul>
+        <div class="card-body">
+            <a href="#" class="card-link">Comprar</a>
+            <a href="#" class="card-link">Añadir al carro</a>
         </div>
-        <div>
-            <img src="../img/rojo.jpg" alt="Joystick xbox">
-            <h3>Joystick Xbox One Red</h3>
-            <p>Precio: $250</p>
-            <a href="" class="boton">Comprar</a>
-            <p>Reseñas: 4.5 estrellas</p>
+    </div>
+    <div class="card">
+        <img src="../img/negro.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+            <h5 class="card-title">Joystick inalámbrico Microsoft Xbox Wireless Controller Series</h5>
+            <p class="card-text">Llega gratis mañana</p>
         </div>
-        <div>
-            <img src="../img/nintendo-mando.jpg" alt="Joystick-nin">
-            <h3>Joystick Xbox One Pink</h3>
-            <p>Precio: $180</p>
-            <a href="" class="boton">Comprar</a>
-            <p>Reseñas: 4.7 estrellas</p>
+        <ul class="list-group list-group-flush">
+            <li class="list-group-item">$44.999</li>
+        </ul>
+        <div class="card-body">
+            <a href="#" class="card-link">Comprar</a>
+            <a href="#" class="card-link">Añadir al carro</a>
         </div>
-        <div>
-            <img src="../img/azul.jpg" alt="Joystick xbox">
-            <h3>Joystick Xbox One Aqua Shift</h3>
-            <p>Precio: $180</p>
-            <a href="" class="boton">Comprar</a>
-            <p>Reseñas: 4.7 estrellas</p>
+    </div>
+    <div class="card">
+        <img src="../img/negro.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+            <h5 class="card-title">Joystick inalámbrico Microsoft Xbox Wireless Controller Series</h5>
+            <p class="card-text">Llega gratis mañana</p>
         </div>
-        <div>
-            <img src="../img/play4-mando.jpg" alt="Joystick-play">
-            <h3>Joystick Sony PlayStation 4</h3>
-            <p>Precio: $180</p>
-            <a href="" class="boton">Comprar</a>
-            <p>Reseñas: 4.7 estrellas</p>
+        <ul class="list-group list-group-flush">
+            <li class="list-group-item">$44.999</li>
+        </ul>
+        <div class="card-body">
+            <a href="#" class="card-link">Comprar</a>
+            <a href="#" class="card-link">Añadir al carro</a>
+        </div>
+    </div>
+    <div class="card">
+        <img src="../img/negro.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+            <h5 class="card-title">Joystick inalámbrico Microsoft Xbox Wireless Controller Series</h5>
+            <p class="card-text">Llega gratis mañana</p>
+        </div>
+        <ul class="list-group list-group-flush">
+            <li class="list-group-item">$44.999</li>
+        </ul>
+        <div class="card-body">
+            <a href="#" class="card-link">Comprar</a>
+            <a href="#" class="card-link">Añadir al carro</a>
+        </div>
+    </div>
+    <div class="card">
+        <img src="../img/negro.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+            <h5 class="card-title">Joystick inalámbrico Microsoft Xbox Wireless Controller Series</h5>
+            <p class="card-text">Llega gratis mañana</p>
+        </div>
+        <ul class="list-group list-group-flush">
+            <li class="list-group-item">$44.999</li>
+        </ul>
+        <div class="card-body">
+            <a href="#" class="card-link">Comprar</a>
+            <a href="#" class="card-link">Añadir al carro</a>
+        </div>
+    </div>
+    <div class="card">
+        <img src="../img/negro.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+            <h5 class="card-title">Joystick inalámbrico Microsoft Xbox Wireless Controller Series</h5>
+            <p class="card-text">Llega gratis mañana</p>
+        </div>
+        <ul class="list-group list-group-flush">
+            <li class="list-group-item">$44.999</li>
+        </ul>
+        <div class="card-body">
+            <a href="#" class="card-link">Comprar</a>
+            <a href="#" class="card-link">Añadir al carro</a>
         </div>
     </div>
 </section>
 
-<!-- MAS VENDIDOS -->
+<!-- TAMBIEN TE PUEDE INTERESAR -->
 
 <main>
     <h2>Tambien te puede interesar</h2>
@@ -196,6 +234,19 @@
             <p>Reseñas: 4.8 estrellas</p>
         </div>
     </div>
+    <nav aria-label="Page navigation example">
+        <ul class="pagination justify-content-center">
+            <li class="page-item disabled">
+                <a class="page-link">Previous</a>
+            </li>
+            <li class="page-item"><a class="page-link" href="#">1</a></li>
+            <li class="page-item"><a class="page-link" href="#">2</a></li>
+            <li class="page-item"><a class="page-link" href="#">3</a></li>
+            <li class="page-item">
+                <a class="page-link" href="#">Next</a>
+            </li>
+        </ul>
+    </nav>
 
 </main>
 
@@ -209,24 +260,12 @@
 
 <footer>
     <div class="logo">
-        <img src="../img/logo.png" width="30px" alt="logo">
+        <img src="../img/logo.png" width="30px" height="35px" alt="logo">
         <h6>Gala<span>XY</span> </h6>
+
     </div>
+
     <div class="footer-container">
-        <ul>
-            <li>
-                <a href="../index.html">Inicio</a>
-            </li>
-            <li>
-                <a href="nosotros.html">Sobre nosotros</a>
-            </li>
-            <li>
-                <a href="productos.html">Productos</a>
-            </li>
-            <li>
-                <a href="contacto.html">Contacto</a>
-            </li>
-        </ul>
         <div class="iconos">
             <a href="https://www.facebook.com" target="_blank">
                 <img src="../img/facebook.png" width="50px" alt="Facebook">
@@ -239,7 +278,6 @@
             </a>
         </div>
     </div>
-
     <!-- DERECHOS DE AUTOR -->
 
     <p>&copy Copyright - Galaxy 2023</p>
