agregar stock joysticks consolas y juegos

--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@
                         data-bs-toggle="dropdown" aria-expanded="false">Productos
                      </a>
                      <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="pages/productos.html">Consolas</a></li>
+                        <li><a class="dropdown-item" href="pages/consolas.html">Consolas</a></li>
                         <li><a class="dropdown-item" href="pages/joysticks.html">Joysticks</a></li>
                         <li>
                            <hr class="dropdown-divider">
                         </li>
-                        <li><a class="dropdown-item" href="pages/productos.html">Juegos</a></li>
+                        <li><a class="dropdown-item" href="pages/juegos.html">Juegos</a></li>
                      </ul>
                   </li>
                   <li class="nav-item">
@@ -71,7 +71,7 @@
             </div>
             <h3>¡Nintendo Switch 30% OFF!</h3>
             <br>
-            <a href="./pages/productos.html">COMPRAR AHORA</a>
+            <a href="./pages/consolas.html">COMPRAR AHORA</a>
          </div>
          <!-- SUSCRIBIRSE -->
          <div class="container-1">
@@ -81,11 +81,13 @@
                <a href="pages/login.html">SUSCRÍBIRSE</a>
             </div>
             <div class="presentacion__parrafo">
-            <p>¡Bienvenidos a Galaxy la ecommerce gamer! <br> En Galaxy, nos enorgullece ofrecer una amplia selección de
-               consolas,
-               juegos, gadgets y mucho más. Nos apasiona la tecnología y creemos que todos deberían tener acceso a los
-               últimos
-               avances y productos innovadores.
+               <p>¡Bienvenidos a Galaxy la ecommerce gamer! <br> En Galaxy, nos enorgullece ofrecer una amplia selección
+                  de
+                  consolas,
+                  juegos, gadgets y mucho más. Nos apasiona la tecnología y creemos que todos deberían tener acceso a
+                  los
+                  últimos
+                  avances y productos innovadores.
             </div>
             </p>
          </div>
@@ -96,66 +98,66 @@
 
    <section>
       <h2>PRODUCTOS DESTACADOS</h2>
-      <section class="joysticks">
+      <section class="productos__dropdown">
          <div class="card">
-             <img src="./img/play4-mando.jpg" class="card-img-top" alt="...">
-             <div class="card-body">
-                 <h5 class="card-title">Joystick inalámbrico Sony PlayStation Dualshock 4 berry blue</h5>
-                 <p class="card-text">
-                     Llega gratis mañana</p>
-             </div>
-             <ul class="list-group list-grou p-flush">
-                 <li class="list-group-item">$79.999</li>
-             </ul>
-             <div class="card-body">
-                 <a href="#" class="card-link">Comprar</a>
-                 <a href="#" class="card-link">Añadir al carro</a>
-             </div>
+            <img src="./img/play4-mando.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+               <h5 class="card-title">Joystick inalámbrico Sony PlayStation Dualshock 4 berry blue</h5>
+               <p class="card-text">
+                  Llega gratis mañana</p>
+            </div>
+            <ul class="list-group list-grou p-flush">
+               <li class="list-group-item">$79.999</li>
+            </ul>
+            <div class="card-body">
+               <a href="#" class="card-link">Comprar</a>
+               <a href="#" class="card-link">Añadir al carro</a>
+            </div>
          </div>
          <div class="card">
-             <img src="./img/nintendo-mando.jpg" class="card-img-top" alt="...">
-             <div class="card-body">
-                 <h5 class="card-title">Set de Joystick inalámbrico Nintendo Switch Joy-Con (L)/(R) rojo neón y azul</h5>
-                 <p class="card-text">
-                     Llega gratis mañana</p>
-             </div>
-             <ul class="list-group list-group-flush">
-                 <li class="list-group-item">$60.690</li>
-             </ul>
-             <div class="card-body">
-                 <a href="#" class="card-link">Comprar</a>
-                 <a href="#" class="card-link">Añadir al carro</a>
-             </div>
+            <img src="./img/nintendo-mando.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+               <h5 class="card-title">Set de Joystick inalámbrico Nintendo Switch Joy-Con (L)/(R) rojo neón y azul</h5>
+               <p class="card-text">
+                  Llega gratis mañana</p>
+            </div>
+            <ul class="list-group list-group-flush">
+               <li class="list-group-item">$60.690</li>
+            </ul>
+            <div class="card-body">
+               <a href="#" class="card-link">Comprar</a>
+               <a href="#" class="card-link">Añadir al carro</a>
+            </div>
          </div>
          <div class="card">
-             <img src="./img/mando-play5.jpg" class="card-img-top" alt="...">
-             <div class="card-body">
-                 <h5 class="card-title">Joystick inalámbrico Sony PlayStation DualSense CFI-ZCT1 cosmic red</h5>
-                 <p class="card-text">Llega gratis mañana</p>
-             </div>
-             <ul class="list-group list-group-flush">
-                 <li class="list-group-item">$63.900</li>
-             </ul>
-             <div class="card-body">
-                 <a href="#" class="card-link">Comprar</a>
-                 <a href="#" class="card-link">Añadir al carro</a>
-             </div>
+            <img src="./img/mando-play5.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+               <h5 class="card-title">Joystick inalámbrico Sony PlayStation DualSense CFI-ZCT1 cosmic red</h5>
+               <p class="card-text">Llega gratis mañana</p>
+            </div>
+            <ul class="list-group list-group-flush">
+               <li class="list-group-item">$63.900</li>
+            </ul>
+            <div class="card-body">
+               <a href="#" class="card-link">Comprar</a>
+               <a href="#" class="card-link">Añadir al carro</a>
+            </div>
          </div>
          <div class="card">
-             <img src="./img/negro.jpg" class="card-img-top" alt="...">
-             <div class="card-body">
-                 <h5 class="card-title">Joystick inalámbrico Microsoft Xbox Wireless Controller Series</h5>
-                 <p class="card-text">Llega gratis mañana</p>
-             </div>
-             <ul class="list-group list-group-flush">
-                 <li class="list-group-item">$44.999</li>
-             </ul>
-             <div class="card-body">
-                 <a href="#" class="card-link">Comprar</a>
-                 <a href="#" class="card-link">Añadir al carro</a>
-             </div>
+            <img src="./img/negro.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+               <h5 class="card-title">Joystick inalámbrico Microsoft Xbox Wireless Controller Series</h5>
+               <p class="card-text">Llega gratis mañana</p>
+            </div>
+            <ul class="list-group list-group-flush">
+               <li class="list-group-item">$44.999</li>
+            </ul>
+            <div class="card-body">
+               <a href="#" class="card-link">Comprar</a>
+               <a href="#" class="card-link">Añadir al carro</a>
+            </div>
          </div>
-     </section>
+      </section>
    </section>
 
    <!-- MAS VENDIDOS -->
@@ -164,21 +166,36 @@
       <div class="popular">
          <h2>LOS MAS VENDIDOS</h2>
          <p>Los que mas eligen nuestros clientes</p>
-
-         <div class="varios">
-            <ul>
-               <li>
-                  <img src="./img/entrega-gratis.png" alt="entrega-gratis">
-               </li>
-               <li>
-                  <img src="./img/segura.png" alt="compra-segura">
-               </li>
-               <li>
-                  <img src="./img/reembolso.png" alt="reembolso">
-               </li>
+         <div class="card">
+            <img src="./img/joystick_006.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+               <h5 class="card-title">Joystick inalámbrico Sony PlayStation DualSense CFI-ZCT1
+               </h5>
+               <p class="card-text">Llega gratis mañana</p>
+            </div>
+            <ul class="list-group list-group-flush">
+               <li class="list-group-item">$59.999</li>
             </ul>
+            <div class="card-body">
+               <a href="#" class="card-link">Comprar</a>
+               <a href="#" class="card-link">Añadir al carro</a>
+            </div>
          </div>
-      </div>
+   </section>
+   <div class="varios">
+      <ul>
+         <li>
+            <img src="./img/entrega-gratis.png" alt="entrega-gratis">
+         </li>
+         <li>
+            <img src="./img/segura.png" alt="compra-segura">
+         </li>
+         <li>
+            <img src="./img/reembolso.png" alt="reembolso">
+         </li>
+      </ul>
+   </div>
+   </div>
    </section>
 
    <!-- RESEÑAS CLIENTES -->
