--- a/pages/consolas.html
+++ b/pages/consolas.html
@@ -19,7 +19,7 @@
 <header>
     <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
-            <a class="navbar-brand" href="../index.html">
+            <a class="navbar-brand" href="index.html">
                 <img class="logo" src="../img/logo.png" alt="logo">Gala<span>XY</span>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll"
@@ -64,14 +64,15 @@
 
 <section class="productos__dropdown">
     <div class="card">
-        <img src="../img/play4-mando.jpg" class="card-img-top" alt="...">
+        <img src="../img/consola_001.jpg" class="card-img-top" alt="...">
         <div class="card-body">
-            <h5 class="card-title">Joystick inalámbrico Sony PlayStation Dualshock 4 berry blue</h5>
+            <h5 class="card-title">Sony PlayStation 3 Super Slim 500GB Standard color charcoal black
+            </h5>
             <p class="card-text">
                 Llega gratis mañana</p>
         </div>
         <ul class="list-group list-grou p-flush">
-            <li class="list-group-item">$79.999</li>
+            <li class="list-group-item">$129.000</li>
         </ul>
         <div class="card-body">
             <a href="#" class="card-link">Comprar</a>
@@ -79,14 +80,15 @@
         </div>
     </div>
     <div class="card">
-        <img src="../img/nintendo-mando.jpg" class="card-img-top" alt="...">
+        <img src="../img/consola_002.jpg" class="card-img-top" alt="...">
         <div class="card-body">
-            <h5 class="card-title">Set de Joystick inalámbrico Nintendo Switch Joy-Con (L)/(R) rojo neón y azul</h5>
+            <h5 class="card-title">Microsoft Xbox 360 Arcade 512MB Standard color matte white
+            </h5>
             <p class="card-text">
                 Llega gratis mañana</p>
         </div>
         <ul class="list-group list-group-flush">
-            <li class="list-group-item">$60.690</li>
+            <li class="list-group-item">$109.099</li>
         </ul>
         <div class="card-body">
             <a href="#" class="card-link">Comprar</a>
@@ -94,9 +96,9 @@
         </div>
     </div>
     <div class="card">
-        <img src="../img/mando-play5.jpg" class="card-img-top" alt="...">
+        <img src="../img/consola_003.jpg" class="card-img-top" alt="...">
         <div class="card-body">
-            <h5 class="card-title">Joystick inalámbrico Sony PlayStation DualSense CFI-ZCT1 cosmic red</h5>
+            <h5 class="card-title">Ps2 Slim Matrix 32gb 2 Joystick</h5>
             <p class="card-text">Llega gratis mañana</p>
         </div>
         <ul class="list-group list-group-flush">
@@ -108,13 +110,14 @@
         </div>
     </div>
     <div class="card">
-        <img src="../img/negro.jpg" class="card-img-top" alt="...">
+        <img src="../img/consola_004.jpg" class="card-img-top" alt="...">
         <div class="card-body">
-            <h5 class="card-title">Joystick inalámbrico Microsoft Xbox Wireless Controller Series</h5>
+            <h5 class="card-title">Microsoft Xbox Series S 512GB Standard color blanco
+            </h5>
             <p class="card-text">Llega gratis mañana</p>
         </div>
         <ul class="list-group list-group-flush">
-            <li class="list-group-item">$44.999</li>
+            <li class="list-group-item">$440.999</li>
         </ul>
         <div class="card-body">
             <a href="#" class="card-link">Comprar</a>
@@ -122,9 +125,9 @@
         </div>
     </div>
     <div class="card">
-        <img src="../img/joystick_001.jpg" class="card-img-top" alt="...">
+        <img src="../img/consola_005.jpg" class="card-img-top" alt="...">
         <div class="card-body">
-            <h5 class="card-title">Joystick inalámbrico Redragon Harrow G808 negro
+            <h5 class="card-title">Consola Kanji KJ-PSPX6 color negro
             </h5>
             <p class="card-text">Llega gratis mañana</p>
         </div>
@@ -137,9 +140,9 @@
         </div>
     </div>
     <div class="card">
-        <img src="../img/joystick_002.jpg" class="card-img-top" alt="...">
+        <img src="../img/consola_006.jpg" class="card-img-top" alt="...">
         <div class="card-body">
-            <h5 class="card-title">Joystick Gamer Bluetooth Gamepad NETMAK 5 en 1
+            <h5 class="card-title">Consola Alien FC Compact 30th Anniversary Edition color blanco y rojo
             </h5>
             <p class="card-text">Llega gratis mañana</p>
         </div>
@@ -152,9 +155,9 @@
         </div>
     </div>
     <div class="card">
-        <img src="../img/joystick_003.jpg" class="card-img-top" alt="...">
+        <img src="../img/consola_007.jpg" class="card-img-top" alt="...">
         <div class="card-body">
-            <h5 class="card-title">Joystick Noganet NG-6000X negro y verde
+            <h5 class="card-title">Nintendo Switch OLED The Legend of Zelda: Tears of the Kingdom Edition - 64 GB
             </h5>
             <p class="card-text">Llega gratis mañana</p>
         </div>
@@ -167,9 +170,10 @@
         </div>
     </div>
     <div class="card">
-        <img src="../img/joystick_004.jpg" class="card-img-top" alt="...">
+        <img src="../img/consola_008.jpg" class="card-img-top" alt="...">
         <div class="card-body">
-            <h5 class="card-title">Joystick Redragon Saturn G807 negro
+            <h5 class="card-title">Mini Consola Arcade Retro Stick Hd Hdmi Joysticks 64gb Caja
+
             </h5>
             <p class="card-text">Llega gratis mañana</p>
         </div>
@@ -182,9 +186,10 @@
         </div>
     </div>
     <div class="card">
-        <img src="../img/joystick_005.jpg" class="card-img-top" alt="...">
+        <img src="../img/consola_009.jpg" class="card-img-top" alt="...">
         <div class="card-body">
-            <h5 class="card-title">Joystick Inalámbrico PS4 para Sony PlayStation Dualshock 4
+            <h5 class="card-title">Mini Consola Arcade Retro Stick Hd Hdmi Joysticks 64gb Caja
+
             </h5>
             <p class="card-text">Llega gratis mañana</p>
         </div>
@@ -197,9 +202,9 @@
         </div>
     </div>
     <div class="card">
-        <img src="../img/joystick_006.jpg" class="card-img-top" alt="...">
+        <img src="../img/consola_010.jpg" class="card-img-top" alt="...">
         <div class="card-body">
-            <h5 class="card-title">Joystick inalámbrico Sony PlayStation DualSense CFI-ZCT1
+            <h5 class="card-title">Nintendo Switch Lite 32GB Standard color amarillo
             </h5>
             <p class="card-text">Llega gratis mañana</p>
         </div>
@@ -212,6 +217,19 @@
         </div>
     </div>
 </section>
+<nav aria-label="Page navigation example">
+    <ul class="pagination justify-content-center">
+        <li class="page-item disabled">
+            <a class="page-link">Previous</a>
+        </li>
+        <li class="page-item"><a class="page-link" href="#">1</a></li>
+        <li class="page-item"><a class="page-link" href="#">2</a></li>
+        <li class="page-item"><a class="page-link" href="#">3</a></li>
+        <li class="page-item">
+            <a class="page-link" href="#">Next</a>
+        </li>
+    </ul>
+</nav>
 
 <!-- TAMBIEN TE PUEDE INTERESAR -->
 
@@ -240,19 +258,7 @@
             <p>Reseñas: 4.8 estrellas</p>
         </div>
     </div>
-    <nav aria-label="Page navigation example">
-        <ul class="pagination justify-content-center">
-            <li class="page-item disabled">
-                <a class="page-link">Previous</a>
-            </li>
-            <li class="page-item"><a class="page-link" href="#">1</a></li>
-            <li class="page-item"><a class="page-link" href="#">2</a></li>
-            <li class="page-item"><a class="page-link" href="#">3</a></li>
-            <li class="page-item">
-                <a class="page-link" href="#">Next</a>
-            </li>
-        </ul>
-    </nav>
+
 
 </main>
 
