--- a/pages/juegos.html
+++ b/pages/juegos.html
@@ -64,14 +64,15 @@
 
 <section class="productos__dropdown">
     <div class="card">
-        <img src="../img/play4-mando.jpg" class="card-img-top" alt="...">
+        <img src="../img/juego_001.jpg" class="card-img-top" alt="...">
         <div class="card-body">
-            <h5 class="card-title">Joystick inalámbrico Sony PlayStation Dualshock 4 berry blue</h5>
+            <h5 class="card-title">Mortal Kombat 11 Ultimate Ultimate Edition - Físico - PS4
+            </h5>
             <p class="card-text">
                 Llega gratis mañana</p>
         </div>
         <ul class="list-group list-grou p-flush">
-            <li class="list-group-item">$79.999</li>
+            <li class="list-group-item">$18.700</li>
         </ul>
         <div class="card-body">
             <a href="#" class="card-link">Comprar</a>
@@ -79,14 +80,14 @@
         </div>
     </div>
     <div class="card">
-        <img src="../img/nintendo-mando.jpg" class="card-img-top" alt="...">
+        <img src="../img/juego_002.jpg" class="card-img-top" alt="...">
         <div class="card-body">
-            <h5 class="card-title">Set de Joystick inalámbrico Nintendo Switch Joy-Con (L)/(R) rojo neón y azul</h5>
+            <h5 class="card-title">Juego Forza Motorsport 6 Edicion 10 Aniversario Xbox One</h5>
             <p class="card-text">
                 Llega gratis mañana</p>
         </div>
         <ul class="list-group list-group-flush">
-            <li class="list-group-item">$60.690</li>
+            <li class="list-group-item">$5.500</li>
         </ul>
         <div class="card-body">
             <a href="#" class="card-link">Comprar</a>
@@ -94,13 +95,14 @@
         </div>
     </div>
     <div class="card">
-        <img src="../img/mando-play5.jpg" class="card-img-top" alt="...">
+        <img src="../img/juego_003.jpg" class="card-img-top" alt="...">
         <div class="card-body">
-            <h5 class="card-title">Joystick inalámbrico Sony PlayStation DualSense CFI-ZCT1 cosmic red</h5>
+            <h5 class="card-title">Gears of War Standard Edition Microsoft Xbox 360 Físico
+            </h5>
             <p class="card-text">Llega gratis mañana</p>
         </div>
         <ul class="list-group list-group-flush">
-            <li class="list-group-item">$63.900</li>
+            <li class="list-group-item">$29.900</li>
         </ul>
         <div class="card-body">
             <a href="#" class="card-link">Comprar</a>
@@ -108,13 +110,14 @@
         </div>
     </div>
     <div class="card">
-        <img src="../img/negro.jpg" class="card-img-top" alt="...">
+        <img src="../img/juego_004.jpg" class="card-img-top" alt="...">
         <div class="card-body">
-            <h5 class="card-title">Joystick inalámbrico Microsoft Xbox Wireless Controller Series</h5>
+            <h5 class="card-title">Juego Xbox One Fifa 17 Original 2017
+            </h5>
             <p class="card-text">Llega gratis mañana</p>
         </div>
         <ul class="list-group list-group-flush">
-            <li class="list-group-item">$44.999</li>
+            <li class="list-group-item">$4.999</li>
         </ul>
         <div class="card-body">
             <a href="#" class="card-link">Comprar</a>
@@ -122,9 +125,9 @@
         </div>
     </div>
     <div class="card">
-        <img src="../img/joystick_001.jpg" class="card-img-top" alt="...">
+        <img src="../img/juego_005.jpg" class="card-img-top" alt="...">
         <div class="card-body">
-            <h5 class="card-title">Joystick inalámbrico Redragon Harrow G808 negro
+            <h5 class="card-title">Juego Xbox One Halo Wars 2 Fisico Nuevo Sellado
             </h5>
             <p class="card-text">Llega gratis mañana</p>
         </div>
@@ -137,14 +140,15 @@
         </div>
     </div>
     <div class="card">
-        <img src="../img/joystick_002.jpg" class="card-img-top" alt="...">
+        <img src="../img/juego_006.jpg" class="card-img-top" alt="...">
         <div class="card-body">
-            <h5 class="card-title">Joystick Gamer Bluetooth Gamepad NETMAK 5 en 1
+            <h5 class="card-title">Rocket League Ultimate Edition Psyonix PS4 Físico
+
             </h5>
             <p class="card-text">Llega gratis mañana</p>
         </div>
         <ul class="list-group list-group-flush">
-            <li class="list-group-item">$12.290</li>
+            <li class="list-group-item">$39.290</li>
         </ul>
         <div class="card-body">
             <a href="#" class="card-link">Comprar</a>
@@ -152,9 +156,10 @@
         </div>
     </div>
     <div class="card">
-        <img src="../img/joystick_003.jpg" class="card-img-top" alt="...">
+        <img src="../img/juego_007.jpg" class="card-img-top" alt="...">
         <div class="card-body">
-            <h5 class="card-title">Joystick Noganet NG-6000X negro y verde
+            <h5 class="card-title">Need for Speed: Payback Standard Edition Electronic Arts PS4 Físico
+
             </h5>
             <p class="card-text">Llega gratis mañana</p>
         </div>
@@ -167,9 +172,9 @@
         </div>
     </div>
     <div class="card">
-        <img src="../img/joystick_004.jpg" class="card-img-top" alt="...">
+        <img src="../img/juego_008.jpg" class="card-img-top" alt="...">
         <div class="card-body">
-            <h5 class="card-title">Joystick Redragon Saturn G807 negro
+            <h5 class="card-title">Resident Evil Village Standard Edition Capcom PS4 Físico
             </h5>
             <p class="card-text">Llega gratis mañana</p>
         </div>
@@ -182,9 +187,9 @@
         </div>
     </div>
     <div class="card">
-        <img src="../img/joystick_005.jpg" class="card-img-top" alt="...">
+        <img src="../img/juego_009.jpg" class="card-img-top" alt="...">
         <div class="card-body">
-            <h5 class="card-title">Joystick Inalámbrico PS4 para Sony PlayStation Dualshock 4
+            <h5 class="card-title">FIFA 23 Standard Edition Electronic Arts PS4 Físico
             </h5>
             <p class="card-text">Llega gratis mañana</p>
         </div>
@@ -197,14 +202,14 @@
         </div>
     </div>
     <div class="card">
-        <img src="../img/joystick_006.jpg" class="card-img-top" alt="...">
+        <img src="../img/juego_010.jpg" class="card-img-top" alt="...">
         <div class="card-body">
-            <h5 class="card-title">Joystick inalámbrico Sony PlayStation DualSense CFI-ZCT1
+            <h5 class="card-title">Red Dead Redemption 2 Standard Edition Rockstar Games PS4 Físico
             </h5>
             <p class="card-text">Llega gratis mañana</p>
         </div>
         <ul class="list-group list-group-flush">
-            <li class="list-group-item">$59.999</li>
+            <li class="list-group-item">$17.580</li>
         </ul>
         <div class="card-body">
             <a href="#" class="card-link">Comprar</a>
