--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -7,7 +7,7 @@
    <title>GalaXY</title>
    <link rel="shortcut icon" href="../img/logo.png">
    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
-   integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+      integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
    <link rel="stylesheet" href="../css/style.css">
    <link rel="preconnect" href="https://fonts.googleapis.com">
    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -15,110 +15,96 @@
 
 </head>
 
-         <!-- BARRA DE NAVEGACION -->
-   <header>
-      <nav class="navbar navbar-expand-lg">
-         <div class="container-fluid">
-            <a class="navbar-brand" href="index.html"><img class="logo" src="../img/logo.png"
-                  alt="logo">Gala<span>XY</span> </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll"
-               aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
-               <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarScroll">
-               <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
-                  <li class="nav-item">
-                     <a class="nav-link" href="../index.html">Inicio</a>
-                  </li>
-                  <li class="nav-item dropdown">
-                     <a class="nav-link dropdown-toggle" href="productos.html" role="button" data-bs-toggle="dropdown"
-                        aria-expanded="false">Productos
-                     </a>
-                     <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="productos.html">Consolas</a></li>
-                        <li><a class="dropdown-item" href="productos.html">Joysticks</a></li>
-                        <li>
-                           <hr class="dropdown-divider">
-                        </li>
-                        <li><a class="dropdown-item" href="productos.html">Juegos</a></li>
-                     </ul>
-                  </li>
-                  <li class="nav-item">
-                     <a class="nav-link" href="galeria.html">Galeria</a>
-                  </li>
-                  <li class="nav-item">
-                     <a class="nav-link" href="nosotros.html">Nosotros</a>
-                  </li>
-               </ul>
-               <form class="d-flex" role="search">
-                  <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Search">
-                  <button class="btn" type="submit">Buscar</button>
-               </form>
-            </div>
-         </div>
-      </nav>
-   </header>
-      <main>
-         <section>
-            <div class="imagenes_galeria">
-               <div class="img_galeria"><img src="../img/mando_play.jpg" alt=""></div>
-               <div class="img_galeria"><img src="../img/mando_xbox.jpg" alt=""></div>
-               <div class="img_galeria mando_nintendo"><img src="../img/mando_nintendo.jpg" alt=""></div>
-               <div class="img_galeria"><img src="../img/play_logo.jpg" alt=""></div>
-               <div class="img_galeria"><img src="../img/xbox_logo.jpg" alt=""></div>
-               <div class="img_galeria"><img src="../img/nintendo_logo.jpg" alt=""></div>
-               <div class="img_galeria"><img src="../img/play_juegos.jpg" alt=""></div>
-               <div class="img_galeria"><img src="../img/xbox_juegos.jpg" alt=""></div>
-               <div class="img_galeria"><img src="../img/juegos_nintendo.jpg" alt=""></div>
-            </div>
-         </section>
-      </main>
-
-      <div class="fixed">
-         <a href=""><img src="../img/wasap.png" alt="whatsapp"></a>
-      </div>
-
-      <!-- FOOTER -->
-
-      <footer>
-         <div class="logo">
-            <img src="../img/logo.png" width="30px" alt="logo">
-            <h6>Gala<span>XY</span> </h6>
-         </div>
-         <div class="footer-container">
-            <ul>
-               <li> 
-                  <a href="../index.html">Inicio</a>
+<!-- BARRA DE NAVEGACION -->
+<header>
+   <nav class="navbar navbar-expand-lg">
+      <div class="container-fluid">
+         <a class="navbar-brand" href="../index.html"><img class="logo" src="../img/logo.png"
+               alt="logo">Gala<span>XY</span> </a>
+         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll"
+            aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+         </button>
+         <div class="collapse navbar-collapse" id="navbarScroll">
+            <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
+               <li class="nav-item">
+                  <a class="nav-link" href="../index.html">Inicio</a>
                </li>
-               <li> 
-                  <a href="nosotros.html">Sobre nosotros</a>
+               <li class="nav-item dropdown">
+                  <a class="nav-link dropdown-toggle" href="productos.html" role="button" data-bs-toggle="dropdown"
+                     aria-expanded="false">Productos
+                  </a>
+                  <ul class="dropdown-menu">
+                     <li><a class="dropdown-item" href="consolas.html">Consolas</a></li>
+                     <li><a class="dropdown-item" href="joysticks.html">Joysticks</a></li>
+                     <li>
+                        <hr class="dropdown-divider">
+                     </li>
+                     <li><a class="dropdown-item" href="juegos.html">Juegos</a></li>
+                  </ul>
                </li>
-               <li>
-                  <a href="productos.html">Productos</a>
+               <li class="nav-item">
+                  <a class="nav-link" href="galeria.html">Galeria</a>
                </li>
-               <li>
-                  <a href="contacto.html">Contacto</a>
+               <li class="nav-item">
+                  <a class="nav-link" href="nosotros.html">Nosotros</a>
                </li>
             </ul>
-            <div class="iconos">
-               <a href="https://www.facebook.com" target="_blank">
-                  <img src="../img/facebook.png" width="50px" alt="Facebook">
-               </a>
-               <a href="https://twitter.com" target="_blank">
-                  <img src="../img/twitter.png" width="50px" alt="Twitter">
-               </a>
-               <a href="https://www.instagram.com" target="_blank">
-                  <img src="../img/instagram.png" width="50px" alt="Instagram">
-               </a>
-            </div>
+            <form class="d-flex" role="search">
+               <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Search">
+               <button class="btn" type="submit">Buscar</button>
+            </form>
          </div>
+      </div>
+   </nav>
+</header>
+<main>
+   <section>
+      <div class="grid_galeria">
+         <div class="img_galeria"><img src="../img/mando_play.jpg" alt=""></div>
+         <div class="img_galeria imagen_alta"><img src="../img/mando_xbox.jpg" alt=""></div>
+         <div class="img_galeria"><img src="../img/mando_nintendo.jpg" alt=""></div>
+         <div class="img_galeria logos"><img src="../img/play_logo.jpg" alt=""></div>
+         <div class="img_galeria"><img src="../img/xbox_logo.jpg" alt=""></div>
+         <div class="img_galeria"><img src="../img/nintendo_logo.jpg" alt=""></div>
+         <div class="img_galeria"><img src="../img/play_juegos.jpg" alt=""></div>
+         <div class="img_galeria"><img src="../img/xbox_juegos.jpg" alt=""></div>
+         <div class="img_galeria imagen_final"><img src="../img/juegos_nintendo.jpg" alt=""></div>
+      </div>
+   </section>
+</main>
 
-         <!-- DERECHOS DE AUTOR -->
+<div class="fixed">
+   <a href=""><img src="../img/wasap.png" alt="whatsapp"></a>
+</div>
+<!-- FOOTER -->
 
-         <p>&copy Copyright - Galaxy 2023</p>
-      </footer>
-      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
-      crossorigin="anonymous"></script>
-   </body>
+<footer>
+   <div class="logo">
+      <img src="../img/logo.png" width="30px" height="35px" alt="logo">
+      <h6>Gala<span>XY</span> </h6>
+
+   </div>
+
+   <div class="footer-container">
+      <div class="iconos">
+         <a href="https://www.facebook.com" target="_blank">
+            <img src="../img/facebook.png" width="50px" alt="Facebook">
+         </a>
+         <a href="https://twitter.com" target="_blank">
+            <img src="../img/twitter.png" width="50px" alt="Twitter">
+         </a>
+         <a href="https://www.instagram.com" target="_blank">
+            <img src="../img/instagram.png" width="50px" alt="Instagram">
+         </a>
+      </div>
+   </div>
+   <!-- DERECHOS DE AUTOR -->
+
+   <p>&copy Copyright - Galaxy 2023</p>
+</footer>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
+   integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
+</body>
+
 </html>
