se agregaron productos en index

--- a/index.html
+++ b/index.html
@@ -166,21 +166,69 @@
       <div class="popular">
          <h2>LOS MAS VENDIDOS</h2>
          <p>Los que mas eligen nuestros clientes</p>
-         <div class="card">
-            <img src="./img/joystick_006.jpg" class="card-img-top" alt="...">
-            <div class="card-body">
-               <h5 class="card-title">Joystick inalámbrico Sony PlayStation DualSense CFI-ZCT1
-               </h5>
-               <p class="card-text">Llega gratis mañana</p>
+         <div class="productos__dropdown">
+            <div class="card">
+               <img src="./img/joystick_006.jpg" class="card-img-top" alt="...">
+               <div class="card-body">
+                  <h5 class="card-title">Joystick inalámbrico Sony PlayStation DualSense CFI-ZCT1
+                  </h5>
+                  <p class="card-text">Llega gratis mañana</p>
+               </div>
+               <ul class="list-group list-group-flush">
+                  <li class="list-group-item">$59.999</li>
+               </ul>
+               <div class="card-body">
+                  <a href="#" class="card-link">Comprar</a>
+                  <a href="#" class="card-link">Añadir al carro</a>
+               </div>
             </div>
-            <ul class="list-group list-group-flush">
-               <li class="list-group-item">$59.999</li>
-            </ul>
-            <div class="card-body">
-               <a href="#" class="card-link">Comprar</a>
-               <a href="#" class="card-link">Añadir al carro</a>
+            <div class="card">
+               <img src="./img/juego_010.jpg" class="card-img-top" alt="...">
+               <div class="card-body">
+                  <h5 class="card-title">Red Dead Redemption 2 Standard Edition Rockstar Games PS4 Físico
+                  </h5>
+                  <p class="card-text">Llega gratis mañana</p>
+               </div>
+               <ul class="list-group list-group-flush">
+                  <li class="list-group-item">$17.580</li>
+               </ul>
+               <div class="card-body">
+                  <a href="#" class="card-link">Comprar</a>
+                  <a href="#" class="card-link">Añadir al carro</a>
+               </div>
+            </div>
+            <div class="card">
+               <img src="./img/consola_003.jpg" class="card-img-top" alt="...">
+               <div class="card-body">
+                  <h5 class="card-title">Ps2 Slim Matrix 32gb 2 Joystick</h5>
+                  <p class="card-text">Llega gratis mañana</p>
+               </div>
+               <ul class="list-group list-group-flush">
+                  <li class="list-group-item">$63.900</li>
+               </ul>
+               <div class="card-body">
+                  <a href="#" class="card-link">Comprar</a>
+                  <a href="#" class="card-link">Añadir al carro</a>
+               </div>
+            </div>
+            <div class="card">
+               <img src="./img/joystick_004.jpg" class="card-img-top" alt="...">
+               <div class="card-body">
+                  <h5 class="card-title">Joystick Redragon Saturn G807 negro
+                  </h5>
+                  <p class="card-text">Llega gratis mañana</p>
+               </div>
+               <ul class="list-group list-group-flush">
+                  <li class="list-group-item">$12.539</li>
+               </ul>
+               <div class="card-body">
+                  <a href="#" class="card-link">Comprar</a>
+                  <a href="#" class="card-link">Añadir al carro</a>
+               </div>
             </div>
          </div>
+
+      </div>
    </section>
    <div class="varios">
       <ul>
