--- a/pages/joysticks.html
+++ b/pages/joysticks.html
@@ -215,13 +215,13 @@
 <nav aria-label="Page navigation example">
     <ul class="pagination justify-content-center">
         <li class="page-item disabled">
-            <a class="page-link">Previous</a>
+            <a class="page-link">Ir atras</a>
         </li>
         <li class="page-item"><a class="page-link" href="#">1</a></li>
         <li class="page-item"><a class="page-link" href="#">2</a></li>
         <li class="page-item"><a class="page-link" href="#">3</a></li>
         <li class="page-item">
-            <a class="page-link" href="#">Next</a>
+            <a class="page-link" href="#">Siguiente</a>
         </li>
     </ul>
 </nav>
