se actualizaron productos de interes y se modifico css

--- a/pages/consolas.html
+++ b/pages/consolas.html
@@ -235,30 +235,54 @@
 
 <main>
     <h2>Tambien te puede interesar</h2>
-    <div class="productos">
-        <div>
-            <img src="../img/nintendo.jpg" alt="Nintendo Swich">
-            <h3>Nintendo Swich</h3>
-            <p>Precio: $650</p>
-            <a href="" class="boton">Comprar</a>
-            <p>Reseñas: 4.5 estrellas</p>
+    <section class="productos__dropdown">
+        <div class="card">
+            <img src="../img/juego_001.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+                <h5 class="card-title">Mortal Kombat 11 Ultimate Ultimate Edition - Físico - PS4
+                </h5>
+                <p class="card-text">
+                    Llega gratis mañana</p>
+            </div>
+            <ul class="list-group list-grou p-flush">
+                <li class="list-group-item">$18.700</li>
+            </ul>
+            <div class="card-body">
+                <a href="#" class="card-link">Comprar</a>
+                <a href="#" class="card-link">Añadir al carro</a>
+            </div>
         </div>
-        <div>
-            <img src="../img/ps5.jpg" alt="PlayStation 5">
-            <h3>PlayStation 5</h3>
-            <p>Precio: $750</p>
-            <a href="" class="boton">Comprar</a>
-            <p>Reseñas: 4 estrellas</p>
+        <div class="card">
+            <img src="../img/juego_002.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+                <h5 class="card-title">Juego Forza Motorsport 6 Edicion 10 Aniversario Xbox One</h5>
+                <p class="card-text">
+                    Llega gratis mañana</p>
+            </div>
+            <ul class="list-group list-group-flush">
+                <li class="list-group-item">$5.500</li>
+            </ul>
+            <div class="card-body">
+                <a href="#" class="card-link">Comprar</a>
+                <a href="#" class="card-link">Añadir al carro</a>
+            </div>
         </div>
-        <div>
-            <img src="../img/gtaV.jpg" width="180px" alt="gta5">
-            <h3>GTA 5</h3>
-            <p>Precio: $150</p>
-            <a href="" class="boton">Comprar</a>
-            <p>Reseñas: 4.8 estrellas</p>
+        <div class="card">
+            <img src="../img/juego_003.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+                <h5 class="card-title">Gears of War Standard Edition Microsoft Xbox 360 Físico
+                </h5>
+                <p class="card-text">Llega gratis mañana</p>
+            </div>
+            <ul class="list-group list-group-flush">
+                <li class="list-group-item">$29.900</li>
+            </ul>
+            <div class="card-body">
+                <a href="#" class="card-link">Comprar</a>
+                <a href="#" class="card-link">Añadir al carro</a>
+            </div>
         </div>
-    </div>
-
+        </div>
 
 </main>
 
