--- a/pages/juegos.html
+++ b/pages/juegos.html
@@ -235,29 +235,52 @@
 
 <main>
     <h2>Tambien te puede interesar</h2>
-    <div class="productos">
-        <div>
-            <img src="../img/nintendo.jpg" alt="Nintendo Swich">
-            <h3>Nintendo Swich</h3>
-            <p>Precio: $650</p>
-            <a href="" class="boton">Comprar</a>
-            <p>Reseñas: 4.5 estrellas</p>
+    <div class="productos__dropdown">
+        <div class="card">
+            <img src="../img/joystick_004.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+                <h5 class="card-title">Joystick Redragon Saturn G807 negro
+                </h5>
+                <p class="card-text">Llega gratis mañana</p>
+            </div>
+            <ul class="list-group list-group-flush">
+                <li class="list-group-item">$12.539</li>
+            </ul>
+            <div class="card-body">
+                <a href="#" class="card-link">Comprar</a>
+                <a href="#" class="card-link">Añadir al carro</a>
+            </div>
         </div>
-        <div>
-            <img src="../img/ps5.jpg" alt="PlayStation 5">
-            <h3>PlayStation 5</h3>
-            <p>Precio: $750</p>
-            <a href="" class="boton">Comprar</a>
-            <p>Reseñas: 4 estrellas</p>
+        <div class="card">
+            <img src="../img/joystick_005.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+                <h5 class="card-title">Joystick Inalámbrico PS4 para Sony PlayStation Dualshock 4
+                </h5>
+                <p class="card-text">Llega gratis mañana</p>
+            </div>
+            <ul class="list-group list-group-flush">
+                <li class="list-group-item">$15.267</li>
+            </ul>
+            <div class="card-body">
+                <a href="#" class="card-link">Comprar</a>
+                <a href="#" class="card-link">Añadir al carro</a>
+            </div>
         </div>
-        <div>
-            <img src="../img/gtaV.jpg" width="180px" alt="gta5">
-            <h3>GTA 5</h3>
-            <p>Precio: $150</p>
-            <a href="" class="boton">Comprar</a>
-            <p>Reseñas: 4.8 estrellas</p>
+        <div class="card">
+            <img src="../img/joystick_006.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+                <h5 class="card-title">Joystick inalámbrico Sony PlayStation DualSense CFI-ZCT1
+                </h5>
+                <p class="card-text">Llega gratis mañana</p>
+            </div>
+            <ul class="list-group list-group-flush">
+                <li class="list-group-item">$59.999</li>
+            </ul>
+            <div class="card-body">
+                <a href="#" class="card-link">Comprar</a>
+                <a href="#" class="card-link">Añadir al carro</a>
+            </div>
         </div>
-    </div>
 </main>
 
 <!-- WHATSAPP -->
